Fix potential dangling iterator

BUG: 290533